test/feature/Syntax/Error_WithInModule.module.js
// Should not compile.
// SyntaxError: feature/Syntax/Error_WithInModule.module.js:4:1: Strict mode code may not include a with statement

with ({}) {}
